--- a/index.html
+++ b/index.html
@@ -66,12 +66,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Paranormal Adventures</h1>
-                        <p class="intro-text">of Samuel Wiley</p>
-                        <a href="#about" class="btn btn-circle page-scroll">
+                        <h1 class="brand-heading"></h1>
+                        <p class="intro-text"></p>
+                        
+                    </div>
+                    <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-caret-down animated"></i>
                         </a>
-                    </div>
                 </div>
             </div>
         </div>
