--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
         <div class="intro-body">
             <div class="container">
                 <div class="row">
-
+                    <div class="col-md-8 col-md-offset-2">
+                        <h1 class="brand-heading"></h1>
+                        <p class="intro-text"></p>
+                        
+                    </div>
                     <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-caret-down animated"></i>
                         </a>
