--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
         <div class="download-section" style="padding-top:100px;">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Where To Buy</h2>
+                    <!--<h2>Where To Buy</h2>
                     <p>The book will be available on the Apple Store on Oct 31st, 2015.</p>
-                    <a href="" class="btn btn-default btn-lg">Link will be published on release day</a>
+                    <a href="" class="btn btn-default btn-lg">Link will be published on release day</a>-->
+                    <br><br><br><br><br><br><br><br><br><br>
                 </div>
             </div>
         </div>
@@ -106,7 +107,7 @@
         <div class="row">
             <h2>About Ali</h2>
             <div class="col-md-8">                
-                <p>Born on September 20th 1990, in Portland, Oregon, Ali Saidi is not your average writer. Ali is a geek, he's been conflicted about whether he prefers DC over Marvel ever since he was a child. Ali is very interested in paranormal sightings such as UFOs, Ghosts, the Mothman, and of course the Chupakabra. And his favorite time of year is Halloween. The Paranormal Adventures of Samuel Wiley has been in the making for over 10 years, and promises to blow your mind away just as Samuel was thrown into an unimaginable realm where his whole world irrevocably changed.</p>
+                <p>Born on September 20th 1990, in Portland, Oregon, Ali Saidi is not your average writer. Ali is an inveterate geek. He's been conflicted about whether he prefers DC over Marvel ever since he was a child. He is very much interested in paranormal sightings such as UFOs, the Mothman, and of course the Chupakabra. And his favorite time of year is Halloween. The Paranormal Adventures of Samuel Wiley has been in the making for over 10 years, and promises to blow your mind away just as Samuel was thrown into an unimaginable realm where his whole world irrevocably changed.</p>
             </div>
             <div class="col-mid-4">
                 <img src="img/ali.jpg" width="20%" style="margin:auto auto 20px auto"><br>
