--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#buy">Buy The Book</a>
+                        <a class="page-scroll" href="#buy">Excerpt</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">The Author</a>
@@ -93,10 +93,15 @@
         <div class="download-section" style="padding-top:100px;">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <!--<h2>Where To Buy</h2>
-                    <p>The book will be available on the Apple Store on Oct 31st, 2015.</p>
-                    <a href="" class="btn btn-default btn-lg">Link will be published on release day</a>-->
-                    <br><br><br><br><br><br><br><br><br><br>
+                    <h2>Excerpt</h2>
+                    <p>It was enough to unnerve most people, but there was nothing threatening in the way Samuel watched her; rather, she felt he watched over her, protecting her like the gargoyles protected buildings - like a gryphon. Victoria was a ghost. Over the years, many people have reported seeing her and say that they realized she was not of this world only when she evaporated before their eyes. Her mother had died when she was thirteen, and her father had been in General Sterling Price's Confederate army since she was sixteen.
+
+Under normal circumstances he would have considered himself one lucky man. But these weren't normal circumstances. He couldn't touch her without his hands going right through her. And he was beginning to care about her in ways he hadn't expected, which made his sexual yearings even worse. But he could only look, and as easy as she was on the eyes, looking didn't solve his problem, but exaggerated it.
+
+Samuel looked beautiful under the Colorado moonlight, his hair even longer now and blowing across his forehead in the pine-scented breeze. A five o'clock shadow dusted his cheeks, and his grey eyes seem illuminated. He wore a gray turtleneck under a light three-quarter-length parka and gray cotton-twill pants.
+
+He wanted her—he knew his reflections had best stop right there for now. He cleared his throat and shook his head to clear his mind, and then proceeded to ask her for a dance.</p>
+                    <a href="" class="btn btn-default btn-lg">Link will be published on release day</a>
                 </div>
             </div>
         </div>
